--- a/starship.toml
+++ b/starship.toml
@@ -24,12 +24,12 @@ deleted = '✘ '
 [aws]
 format = 'on [$symbol($profile )]($style)'
 symbol = ''
-style = 'bold red'
+style = 'bold yellow'
 
 [gcloud]
 format = 'on [$symbol$account(@$domain)]($style) '
 symbol = ''
-style = 'bold blue'
+style = 'bold cyan'
 
 [package]
 disabled = true
